--- a/src/app/_components/sidebar/Sidebar.css
+++ b/src/app/_components/sidebar/Sidebar.css
@@ -13,8 +13,8 @@ div.introduction{
 
 div.sidebar{
     width: 500px;
-    height: 1200vh;
-    background-color: #ffff99;
+    /*height: 1200vh;*/
+    /*background-color: #ffff99;*/
     margin-right: 80px;
     margin-left: 30px;
 
@@ -52,24 +52,25 @@ div.sidebar .cart p {
 div.cart_inProduct{
     width: 700px;
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
+    /*justify-content: space-between;*/
+    margin: 70px 0 20px 40px;
 }
 div.cart_inProduct figure{
-    margin-top: 100px;
-    margin-left:55px ;
-    max-width: 190px;
-    max-height: 220px;
+
+    max-width: 200px;
+    max-height: 200px;
 
 }
 div.cart_inProduct figure img{
-    width: 140px;
-    height: 220px;
+    /*width: 140px;*/
+    /*height: 220px;*/
+    object-fit: cover;
 
 }
 
 div.cart_inProduct ul{
-    margin-top: 130px;
-    margin-right: 30px;
+    margin: 10px 0 0 30px;
     width: 400px;
 
     font-size: 1.2rem;
@@ -79,6 +80,22 @@ div.cart_inProduct ul li {
     display:flex;
 
 }
+
+a#side_product_detail{
+    display: block;
+    width: 150px;
+    height: 2.5rem;
+    padding: 10px 10px;
+    text-decoration: none;
+    color: black;
+    border: 1px solid #000;
+    border-radius: 50px;
+    margin: 0 0 0 275px ;
+    text-align: center;
+
+}
+
+
 p#total_price{
     display: inline-block;
     width: 130px;
@@ -95,14 +112,3 @@ p#total_yen{
     margin-bottom: 100px;
 }
 
-div.sidebar a#side_product_detail{
-    width: 100px;
-    height: 10px;
-    padding: 10px 10px;
-    text-decoration: none;
-    color: black;
-    border: 1px solid #000;
-    border-radius: 50px;
-    margin: 0 0 0 230px ;
-    margin-top: 300px;
-}
