--- a/src/app/pages/paidNote/paidNote.css
+++ b/src/app/pages/paidNote/paidNote.css
@@ -3,6 +3,19 @@ body {
     padding: 0;
 }
 
+span#btn{
+    position: sticky;
+    top: 90%;
+    left: 87%;
+}
+
+span#btn button{
+    opacity: 0.5;
+    padding: 10px 30px;
+    border-radius: 20px;
+}
+
+
 div.paidText h2{
     margin-top: 70px;
     margin-bottom: 120px;
@@ -13,7 +26,7 @@ div.paidText h2{
 div.listing{
     display: flex;
     margin-left: 30px;
-
+    margin-bottom: 20px;
 }
 div.listing_product {
     display: flex;
