--- a/src/app/_components/footer/Footer.css
+++ b/src/app/_components/footer/Footer.css
@@ -1,14 +1,24 @@
 div#footer{
     width: 100%;
-    height: 100px;
+    height: 70px;
     background-color: #000;
 }
 div#links{
     display: flex;
     flex-direction: row;
+    justify-content: center;
     flex-wrap: wrap;
+    margin: 10px 0 20px 0;
 }
 p{
     font-size: 0.8rem;
     color: #aaa;
+    margin: 10px 0 0 0;
+}
+span{
+    margin: 0 5rem 0 0;
+}
+p#c{
+    width: 100%;
+    text-align: center;
 }
