--- a/src/app/_components/footer/Footer.css
+++ b/src/app/_components/footer/Footer.css
@@ -1,7 +1,9 @@
 div#footer{
+    display: inline-block;
     width: 100%;
-    height: 70px;
+    height: auto;
     background-color: #000;
+    margin: 20px 0 0 0;
 }
 div#links{
     display: flex;
@@ -13,12 +15,12 @@ div#links{
 p{
     font-size: 0.8rem;
     color: #aaa;
-    margin: 10px 0 0 0;
 }
-span{
-    margin: 0 5rem 0 0;
+p span{
+    margin: 0 1rem 0 1rem;
 }
 p#c{
     width: 100%;
     text-align: center;
+    margin: 0 0 10px 0;
 }
