--- a/src/app/confirmPoints/confirmPoints.css
+++ b/src/app/confirmPoints/confirmPoints.css
@@ -21,9 +21,7 @@ div#point_main{
 div.confirm{
     width: 700px;
     align-items: center;
-    margin-left: 100px;
-    margin-top: 120px;
-    margin-bottom: 90px;
+    margin: 120px 0 90px 70px;
     padding-bottom: 90px;
 }
 
@@ -46,7 +44,12 @@ div.confirm p {
 
 div.recommend_products{
     width: 700px;
-    margin-left: -23px;
+    /*margin-left: -23px;*/
+}
+div.recommend_products img{
+    width: 170px;
+    height: 170px;
+    object-fit: fill;
 }
 
 div.recommend_products h2 {
@@ -57,8 +60,9 @@ div.recommend_products h2 {
 
 
 div.recommend_product{
-    width: 100%;
+    width: 1000px;
     display: flex;
+    gap: 50px;
     margin-top: 20px;
 
 }
@@ -77,7 +81,7 @@ div.rightbar_product_text{
 }
 
 div.rightbar_product_text p{
-    font-size: 30px;
+    font-size: 1.2rem;
 }
 
 
