--- a/src/app/(auth)/register/register.css
+++ b/src/app/(auth)/register/register.css
@@ -20,7 +20,7 @@ header{
     display: block;
 }
 header h1{
-    margin-top: 50px;
+    margin: 30px 0 20px 0;
     display: block;
     text-align: center;
 }
@@ -44,7 +44,7 @@ div#bgwhite{
     border-radius: 10px;
     margin: 0 auto;
     padding-bottom: 35px;
-    box-shadow: #000000cc 0px 0px 10px;
+    box-shadow: #000000cc 0 0 10px;
 }
 
 
