--- a/src/app/_components/header/Heder.css
+++ b/src/app/_components/header/Heder.css
@@ -1,28 +1,32 @@
+@import url('https://fonts.googleapis.com/css2?family=Italiana&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Italiana&family=JetBrains+Mono:wght@100..800&display=swap');
 body {
+
     margin: 0;
     padding: 0;
 }
 header {
     display: -webkit-flex;
     display: inline-block;
-    width: 100%;
+    width: auto;
 }
-
 header div.nav {
     margin-top: 30px;
     display: flex;
     align-items: center;
-    width: 100%;
 
 }
 
 header div.title h1 {
-    font-size: 3rem;
+    font-family: "Italiana", sans-serif;
+    font-size: 3.2rem;
+    font-weight: normal;
+    letter-spacing: 5px;
     width: 200px;
     margin-left: 100px;
 }
 div.bar{
-    width: 400px;
+    /*width: 400px;*/
     margin-left: 200px;
 }
 
@@ -35,9 +39,12 @@ header div.bar ul {
     font-size: 1rem;
 }
 
-
+/* <uniquifier>: Use a unique and descriptive class name
+   <weight>: Use a value from 100 to 800*/
 div.bar ul li {
     position: relative;
+    font-family: "JetBrains Mono", monospace;
+    font-weight: 400;
     font-size: 1.5rem;
     margin-left: 30px;
 }
@@ -122,7 +129,8 @@ div.bar ul span#short_line {
 }
 
 div.bar ul span p#short_text {
-    font-size: 1.5rem;
+    font-weight: 100;
+    font-size: 1.3rem;
     margin-top: 10px;
     margin-left: -20px;
     width:50px;
@@ -144,11 +152,14 @@ div.bar ul span.long_line {
     width :100px;
     align-items: center;
     padding-left: 45px;
+
 }
 #uru{
-    display: flex;
-    margin-top: -20px;
-    width: 90px;
+    font-size: 1.3rem;
+    font-weight: 100;
+    width: 100px;
+    margin: 20px 0 0 10px;
+    text-align: center;
 }
 
 
