--- a/src/app/_components/searchHeader/searchHeader.css
+++ b/src/app/_components/searchHeader/searchHeader.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Italiana&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Italiana&family=JetBrains+Mono:wght@100..800&display=swap');
 body {
     margin: 0;
     padding: 0;
@@ -13,7 +15,9 @@ header {
 div.bar {
     align-items: center;
     display: flex;
-    font-size: 2rem;
+
+    font-family: "JetBrains Mono", monospace;
+    font-weight: 400;    font-size: 2rem;
     margin-left: 0px;
 }
 
@@ -24,7 +28,10 @@ header div.nav {
 }
 
 header div.title h1 {
-    font-size: 2.5rem;
+    font-family: "Italiana", sans-serif;
+    letter-spacing: 5px;
+    font-width: normal;
+    font-size: 3.2rem;
     width: 200px;
     margin-left: 110px;
 }
@@ -36,6 +43,7 @@ header div.bar ul {
     align-items: center;
     list-style: none;
     margin-left: 30px;
+
     font-size: 2rem;
 }
 
