--- a/src/app/_components/sidebar/Sidebar.css
+++ b/src/app/_components/sidebar/Sidebar.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Italiana&family=JetBrains+Mono:wght@100..800&display=swap');
+
 body {
     margin: 0;
     padding: 0;
@@ -34,10 +36,12 @@ hr#side_line{
 }
 
 div.sidebar .cart h1 {
+    font-family: "JetBrains Mono",monospace;
     display: flex;
     width: 150px;
     height: 30px;
     font-size: 2.5rem;
+    font-weight: 300;
     margin-left: 70px;
     margin-right: 120px;
     align-items: center;
