--- a/src/app/_components/searchHeader/searchHeader.css
+++ b/src/app/_components/searchHeader/searchHeader.css
@@ -16,7 +16,8 @@ div.bar {
     display: flex;
 
     font-family: "JetBrains Mono", monospace;
-    font-weight: 400;    font-size: 2rem;
+    font-weight: 400;
+    font-size: 2rem;
     margin-left: 0px;
 }
 
