--- a/src/app/product/product.css
+++ b/src/app/product/product.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Italiana&family=JetBrains+Mono:wght@100..800&display=swap');
+
 body {
     margin: 0;
     padding: 0;
@@ -26,8 +28,11 @@ div#cartText{
 }
 
 div#cartText h2{
+
+    font-family: "JetBrains Mono", monospace;
+    font-weight: 400;
     font-size: 2rem;
-    font-weight: bold;
+    font-weight: 400;
     margin-right: 30px;
 }
 
