--- a/src/app/payComplete/payComplete.css
+++ b/src/app/payComplete/payComplete.css
@@ -11,9 +11,11 @@ main{
 }
 h2{
     font-size: 2.5rem;
+    margin: 0 0 50px 0;
 }
 p{
     font-size: 1.2rem;
+    margin: 0 0 25px 0;
     line-height: 2;
 }
 a{
@@ -21,6 +23,7 @@ a{
     font-size: 40px;
     text-decoration: none;
     color: #555;
+    margin: 0 0 25px 0;
 }
 
 a#return{
