--- a/src/app/_components/searchHeader/searchHeader.css
+++ b/src/app/_components/searchHeader/searchHeader.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Italiana&family=JetBrains+Mono:wght@100..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Italiana&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Zen+Kaku+Gothic+Antique:wght@300;400;500;700;900&display=swap');
+
 body {
     margin: 0;
     padding: 0;
@@ -18,7 +19,7 @@ div.bar {
     font-family: "JetBrains Mono", monospace;
     font-weight: 400;
     font-size: 2rem;
-    margin-left: 0px;
+    margin-left: 0;
 }
 
 header div.nav {
@@ -30,7 +31,7 @@ header div.nav {
 header div.title h1 {
     font-family: "Italiana", sans-serif;
     letter-spacing: 5px;
-    font-width: normal;
+    font-weight: normal;
     font-size: 3.2rem;
     width: 200px;
     margin-left: 110px;
@@ -39,7 +40,7 @@ header div.title h1 {
 header div.bar ul {
     display: -webkit-flex;
     display: flex;
-    width　: 700px;
+    width: 700px;
     align-items: center;
     list-style: none;
     margin-left: 30px;
