--- a/src/app/sendAddress/sendAddress.css
+++ b/src/app/sendAddress/sendAddress.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Italiana&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Zen+Kaku+Gothic+Antique:wght@300;400;500;700;900&display=swap');
+
+
 body {
     margin: 0;
     padding: 0;
@@ -12,6 +15,7 @@ main{
 div.goods{
     display: flex;
     flex-direction: row;
+    font-family: "zen KakuGothic Antique",system-ui;
     margin: 30px 0 50px 0;
 }
 div.goods img{
