--- a/src/app/updateProfile/updateProfile.css
+++ b/src/app/updateProfile/updateProfile.css
@@ -1,8 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Italiana&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Zen+Kaku+Gothic+Antique:wght@300;400;500;700;900&display=swap');
+
 body {
+    font-family: "zen+KakuGothic+Antique", system-ui;
+
     margin: 0;
     padding: 0;
 }
 div.updateProfile_Text h1 {
+    font-weight: bold;
     margin-top: 70px;
     margin-bottom: 70px;
     font-size: 2rem;
@@ -16,6 +21,7 @@ div.enterUpdateUserProfile{
 }
 
 div.updateProfile_img{
+
 }
 
 div.profile_img{
