--- a/src/app/_components/toppageslideshow/slideshow.css
+++ b/src/app/_components/toppageslideshow/slideshow.css
@@ -8,6 +8,7 @@ div.top_main {
     width: 760px;
     height: 90vh;
     margin: 0 auto;
+    margin-left: -80px;
     margin-top: 100px;
     justify-content: space-between;
 }
@@ -18,6 +19,11 @@ div.top_main {
     width: 800px;
     height: 500px;
     margin-bottom: 10px;
+}
+
+.slideImage{
+    width: 100%;
+    height: auto;
 }
 
 .each-slide-effect {
