ヘッダーにオンマウスで色

--- a/src/app/_components/header/Heder.css
+++ b/src/app/_components/header/Heder.css
@@ -24,6 +24,11 @@ header div.title h1 {
     width: 200px;
     margin-left: 100px;
 }
+header div.title h1:hover{
+    text-decoration: underline 1px solid;
+}
+
+
 div.bar{
     /*width: 400px;*/
     margin-left: 200px;
@@ -32,7 +37,7 @@ div.bar{
 header div.bar ul {
     display: -webkit-flex;
     display: flex;
-    width: 900px;
+    width: 100%;
     list-style: none;
     margin-right: 260px;
     font-size: 1rem;
@@ -47,6 +52,12 @@ div.bar ul li {
     font-size: 1.5rem;
     margin-left: 30px;
 }
+/*オンマウスでほんのり色づく*/
+div.bar ul li:hover{
+    /*background-color: #D0C7B2;*/
+    text-shadow: 0 0 30px #BF9E80 ,0 0 20px #D0C7B2,0 0 15px #D0C7B2;
+}
+
 
 .bell{
     position: absolute;
