--- a/src/app/_components/header/Heder.css
+++ b/src/app/_components/header/Heder.css
@@ -23,7 +23,7 @@ header div.title h1 {
     font-weight: normal;
     letter-spacing: 5px;
     width: 200px;
-    margin-left: 100px;
+    margin-left: 80px;
 }
 header div.title h1:hover{
     text-decoration: underline 1px solid;
@@ -53,12 +53,20 @@ div.bar ul li {
     font-size: 1.5rem;
     margin-left: 30px;
 }
+li#search{
+    text-align: center;
+}
+li#search svg{
+    margin:5px 0 0 0;
+}
 /*オンマウスでほんのり色づく*/
 div.bar ul li:hover{
     /*background-color: #D0C7B2;*/
     text-shadow: 0 0 30px #BF9E80 ,0 0 20px #D0C7B2,0 0 15px #D0C7B2;
 }
-
+li#name{
+    width:8rem;
+}
 
 .bell{
     position: absolute;
@@ -137,7 +145,7 @@ div.bar ul li:hover{
 }
 
 .alert svg{
-    margin-right: 30px;
+    margin-left: 30px;
     padding-bottom: 10px;
 }
 
