--- a/src/app/(auth)/login/login.css
+++ b/src/app/(auth)/login/login.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Italiana&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Zen+Kaku+Gothic+Antique:wght@300;400;500;700;900&display=swap');
+
 body {
     margin: 0;
     padding: 0;
@@ -16,13 +18,16 @@ div.flower_img{
 }
 
 header{
-    font-size: 1.5rem;
     display: block;
 }
 header h1{
-    margin-top: 30px;
+    margin-top: 70px;
+    letter-spacing: 6px;
     display: block;
+    font-size: 4rem;
     text-align: center;
+    font-family: "Italiana", sans-serif;
+
 }
 
 section{
@@ -45,6 +50,7 @@ div#bgwhite{
     margin: 0 auto;
     padding-bottom: 35px;
     box-shadow: #000000cc 0px 0px 10px;
+    margin-top:50px ;
 }
 
 
