--- a/src/app/(auth)/register/register.css
+++ b/src/app/(auth)/register/register.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Italiana&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Zen+Kaku+Gothic+Antique:wght@300;400;500;700;900&display=swap');
+
+
 body {
     margin: 0;
     padding: 0;
@@ -20,9 +23,12 @@ header{
     display: block;
 }
 header h1{
-    margin: 30px 0 20px 0;
+    margin: 50px 0 20px 0;
     display: block;
     text-align: center;
+    font-family: "Italiana", sans-serif;
+    letter-spacing: 6px;
+    font-size: 4rem;
 }
 
 section{
@@ -45,6 +51,9 @@ div#bgwhite{
     margin: 0 auto;
     padding-bottom: 35px;
     box-shadow: #000000cc 0 0 10px;
+    margin-top:20px ;
+
+
 }
 
 
