--- a/src/app/_components/listingScreenRadiobutton/listingScreenRadiobutton.css
+++ b/src/app/_components/listingScreenRadiobutton/listingScreenRadiobutton.css
@@ -49,6 +49,10 @@ body {
     flex-direction: column;
 }
 
+.css-vqmohf-MuiButtonBase-root-MuiRadio-root.Mui-checked{
+    color: #555555 !important;
+}
+
 .Size_Situation{
     width: 400px;
     display: flex;
