--- a/src/app/listingcomplete/listingcomplete.css
+++ b/src/app/listingcomplete/listingcomplete.css
@@ -69,6 +69,10 @@ div#text a#seller{
     text-decoration: none;
 }
 
+div#text a#seller h2{
+    margin-right: 20px;
+}
+
 div#text p {
     margin-bottom: 40px;
 }
@@ -94,7 +98,6 @@ div#control{
 }
 
 button{
-    width: 200px;
     background-color: #000;
     font-size: 1.2rem;
     color: #fff;
