--- a/src/app/listingcomplete_Itiosikinou/listingcomplete_itiosikinou.css
+++ b/src/app/listingcomplete_Itiosikinou/listingcomplete_itiosikinou.css
@@ -1,66 +1,81 @@
+@import url('https://fonts.googleapis.com/css2?family=Italiana&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Zen+Kaku+Gothic+Antique:wght@300;400;500;700;900&display=swap');
+
+
 body {
     margin: 0;
     padding: 0;
+    font-family: "Zen Kaku Gothic Antique", sans-serif;
+
 }
+
 /*全体 */
-div#product{
+div#product {
     width: 1100px;
     display: flex;
     flex-direction: column;
     margin-left: 130px;
 }
 
-div#product h1{
+div#product h1 {
     margin-top: 80px;
     margin-bottom: 10px;
 }
 
 /*商品情報全体*/
-div#info{
+div#info {
     display: flex;
     flex-direction: row;
 }
 
 /*商品画像 #photo*/
-div#photo{
+div#photo {
     margin: 20px 50px 0 50px;
 }
-div#photo img#sum{
+
+div#photo img#sum {
     width: 400px;
     height: 400px;
 }
+
 /* 画像リスト */
-ul.piclist{
+ul.piclist {
     display: flex;
     justify-content: left;
     margin: 10px 0 10px 0;
     padding: 0;
 }
-li.picts{
+
+li.picts {
     list-style: none;
-    margin: 0 10px 0 0 ;
+    margin: 0 10px 0 0;
 }
-li.picts a{
+
+li.picts a {
     display: block;
     outline: none;
 }
-li.picts a img.pictS{
+
+li.picts a img.pictS {
     height: 50px;
     width: 50px;
 }
 
 
 /*商品説明 #text*/
-div#text{
+div#text {
     margin-top: -152px;
     display: flex;
     flex-direction: column;
     width: 900px;
+
 }
-div#text h1{
+
+div#text h1 {
     font-size: 3rem;
+    font-family: "Zen Kaku Gothic Antique", sans-serif;
 }
-div#text a#seller{
+
+div#text a#seller {
     display: flex;
     align-items: center;
     flex-direction: row;
@@ -69,15 +84,21 @@ div#text a#seller{
     text-decoration: none;
 }
 
+div#text a#seller h2 {
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
 div#text p {
     margin-bottom: 40px;
 }
 
 
-div#text a#seller h2{
+div#text a#seller h2 {
     font-size: 1.2rem;
 }
-div#text a#seller img{
+
+div#text a#seller img {
 
     height: 50px;
     width: 50px;
@@ -87,14 +108,13 @@ div#text a#seller img{
 
 /* 購入ボタン・アイコン #control*/
 
-div#control{
+div#control {
     width: 400px;
     display: flex;
     margin-left: 60%;
 }
 
-button{
-    width: 200px;
+button {
     background-color: #000;
     font-size: 1.2rem;
     color: #fff;
