--- a/src/app/(auth)/login/login.css
+++ b/src/app/(auth)/login/login.css
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Italiana&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Zen+Kaku+Gothic+Antique:wght@300;400;500;700;900&display=swap');
 
 
-body {
+.allScreen{
     margin: 0;
     padding: 0;
     background-color: #D0C7B2;
-    overflow-x: hidden;
+    height: 100vh;
+    overflow: hidden;
 }
 
 div.flower_img{
@@ -14,7 +15,7 @@ div.flower_img{
     position: fixed;
     top:0;
     left: -1px;
-    z-index: -1;
+    z-index: 0;
     opacity: 0.5;
 }
 
@@ -51,6 +52,9 @@ div#bgwhite{
     padding-bottom: 35px;
     box-shadow: #000000cc 0px 0px 10px;
     margin-top:50px ;
+
+    position: relative;
+    z-index: 1;
 }
 
 
