--- a/src/app/(auth)/register/register.css
+++ b/src/app/(auth)/register/register.css
@@ -1,12 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Italiana&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Zen+Kaku+Gothic+Antique:wght@300;400;500;700;900&display=swap');
 
 
-body {
+
+.allScreen{
     margin: 0;
     padding: 0;
     background-color: #D0C7B2;
-    overflow-x: hidden;
+    height: 100vh;
+    overflow: hidden;
 }
+
 
 div.flower_img{
     width: 100%;
@@ -14,7 +17,7 @@ div.flower_img{
     position: fixed;
     top:0;
     left: -1px;
-    z-index: -1;
+    z-index: 0;
     opacity: 0.5;
 }
 
@@ -42,6 +45,8 @@ section{
 
 
 div#bgwhite{
+    position: relative;
+    z-index: 1;
     display: flex;
     width: 40%;
     height: fit-content;
