--- a/src/app/_components/header/Heder.css
+++ b/src/app/_components/header/Heder.css
@@ -52,6 +52,16 @@ div.bar ul li {
     font-size: 1.5rem;
     margin-left: 30px;
 }
+
+div.bar ul li p#category{
+    position: relative;
+    font-family: "JetBrains Mono", monospace;
+    font-weight: 400;
+    font-size: 1.5rem;
+    margin-left: 30px;
+    margin-top: 3px;
+}
+
 li#search{
     text-align: center;
 }
