--- a/src/app/listingcomplete/listingcomplete.css
+++ b/src/app/listingcomplete/listingcomplete.css
@@ -3,16 +3,21 @@ body {
     padding: 0;
 }
 /*全体 */
-div#product{
+div#productlisning{
     width: 1200px;
+    margin-top: 100px;
     display: flex;
     flex-direction: column;
     margin-left: 180px;
 }
 
-div#product h1{
+h1.liscomph2{
     margin-top: 80px;
     margin-bottom: 10px;
+}
+
+.proimg{
+    margin-top: 80px;
 }
 
 /*商品情報全体*/
