--- a/src/app/(auth)/login/login.css
+++ b/src/app/(auth)/login/login.css
@@ -23,7 +23,9 @@ header{
     display: block;
 }
 header h1{
-    margin-top: 70px;
+    font-family: "Italiana", sans-serif;
+    font-weight: normal;
+    margin: 25px 0 25px 0 ;
     letter-spacing: 6px;
     display: block;
     font-size: 4rem;
@@ -31,7 +33,7 @@ header h1{
 
 }
 
-section{
+section#login{
     width: 800px;
     margin-top: 4%;
     margin-left: 36%;
@@ -50,8 +52,8 @@ div#bgwhite{
     border-radius: 10px;
     margin: 0 auto;
     padding-bottom: 35px;
-    box-shadow: #000000cc 0px 0px 10px;
-    margin-top:50px ;
+    box-shadow: #000000cc 0 0 10px;
+    /*margin-top:50px ;*/
 
     position: relative;
     z-index: 1;
@@ -70,6 +72,7 @@ form{
 }
 
 form h2{
+    margin: 10px 0 10px 0;
 }
 
 form input{
@@ -105,7 +108,7 @@ form button{
 .Slideshow{
     width: 730px;
     height: 500px;
-
+    margin: 25px 0 0 0;
     position: absolute;
     top: 50%;
     left: 3%;
