--- a/src/app/_components/footer/Footer.css
+++ b/src/app/_components/footer/Footer.css
@@ -1,16 +1,16 @@
 div#footer{
-    display: inline-block;
     width: 100%;
     height: auto;
     background-color: #000;
     margin: 0px 0 0 0;
+    padding-top: 3px    ;
 }
 div#links{
     display: flex;
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
-    margin: 10px 0 20px 0;
+    margin: 10px 0 0   0;
 }
 div#footer p{
     font-size: 0.8rem;
@@ -22,5 +22,5 @@ p span{
 p#c{
     width: 100%;
     text-align: center;
-    margin: 0 0 10px 0;
+    margin: 0 0  0;
 }
