--- a/src/app/_components/header/Heder.css
+++ b/src/app/_components/header/Heder.css
@@ -3,6 +3,9 @@ body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+
+    position: relative;
+    z-index: 2 ;
 }
 header {
     display: -webkit-flex;
