--- a/src/app/toppage/toppage.css
+++ b/src/app/toppage/toppage.css
@@ -1,10 +1,24 @@
 body {
     margin: 0;
     padding: 0;
+    background:#f3f3eb;
+}
+
+div.toppageVideo{
+    position: absolute;
+    z-index: 10;
+    width: 820px;
+    background: #8e7560;
+    display: none;
+
+}
+
+div.toppageVideo video{
+    max-width: 100%;
 }
 
 div.toppage{
-    width: 1400px;
+    width: 700px;
     display: flex;
     margin-left: -20px;
 }
