トップページslideshowのｃｓｓの名称変更とスライド1の編集

--- a/src/app/_components/header/Heder.css
+++ b/src/app/_components/header/Heder.css
@@ -11,6 +11,8 @@ header {
     display: -webkit-flex;
     display: inline-block;
     width: auto;
+
+    background-color: #EBE8DB;
 }
 header div.nav {
     margin-top: 30px;
