--- a/src/app/_components/toppage_top_slideshow/toppage_top_slideshow.css
+++ b/src/app/_components/toppage_top_slideshow/toppage_top_slideshow.css
@@ -1,14 +1,17 @@
 .slide_master{
-    width: 1300px;
+    width: 100%;
     display: flex;
+    align-items: center;
+    padding-top: 70px;
     margin: 0 auto;
+    background-color: #EBE8DB;
 }
 
 .slide-show {
     display: flex;
     align-items: center;
+    justify-content: center;
     width: 100%;
-    height: 100vh;
     overflow: hidden;
 }
 .photo_list{
@@ -19,25 +22,35 @@
 .slide_text {
     display: block;
     align-items: center;
-    width: 300px;
+    width: 200px;
     text-align: center;
     margin: 20px;
+    font-size: 0.5rem;
 }
 .slide {
     display: block;
-    width: 300px;
-    height: 500px;
+    width: 800px;
+    height: 450px;
     margin: 20px;
     background-size: cover;
     background-position: center;
+    border: #fff 3px solid;
+    border-radius: 10px;
 }
 
 .slide_next {
     display: block;
-    width: 300px;
-    height: 500px;
+    width: 200px;
+    height: 200px;
     margin: 20px;
     background-size: cover;
     background-position: center;
 
+}
+
+.topbutton{
+    padding: 0 10px;
+    margin:0 30px;
+    border-radius: 20px;
+    font-size: 1.3rem;
 }
