--- a/src/app/_components/toppage_top_slideshow/common.css
+++ b/src/app/_components/toppage_top_slideshow/common.css
@@ -41,3 +41,23 @@
     background-position: center;
 
 }
+
+/* styles.css */
+@keyframes buttonAnimation {
+    0% {
+        transform: scale(1);
+        background-color: #f00;
+    }
+    50% {
+        transform: scale(1.1);
+        background-color: #0056b3;
+    }
+    100% {
+        transform: scale(1);
+        background-color: #007bff;
+    }
+}
+
+.animate {
+    animation: buttonAnimation 0.5s ease-out;
+}
