--- a/src/app/_components/toppage_top_slideshow/common.css
+++ b/src/app/_components/toppage_top_slideshow/common.css
@@ -1,9 +1,7 @@
 /*========= レイアウトのためのCSS ===============*/
 
 .bgextend{
-    width: 220px;
-    padding: 20px;
-    margin:0 20px 20px 0;
+    width: 400px;
     box-sizing:border-box;
 }
 
@@ -13,6 +11,7 @@
 .bgextend{
     animation-name:bgextendAnimeBase;
     animation-duration:1s;
+    animation-delay: 0.6s;
     animation-fill-mode:forwards;
     position: relative;
     overflow: hidden;/*　はみ出た色要素を隠す　*/
@@ -32,8 +31,7 @@
 /*中の要素*/
 .bgappear{
     animation-name:bgextendAnimeSecond;
-    animation-duration:1s;
-    animation-delay: 0.6s;
+    /*animation-delay: 0.6s;*/
     animation-fill-mode:forwards;
     opacity: 0;
 }
@@ -47,17 +45,7 @@
     }
 }
 
-/*--------- 右から --------*/
-.bgRLextend::before{
-    animation-name:bgRLextendAnime;
-    animation-duration:1s;
-    animation-fill-mode:forwards;
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: #600;/*伸びる背景色の設定*/
-}
+
 @keyframes bgRLextendAnime{
     0% {
         transform-origin:right;
@@ -112,6 +100,7 @@
     background-position: center;
 }
 
+
 .slide_next {
     display: block;
     width: 300px;
@@ -124,29 +113,17 @@
 
 /* styles.css */
 
-
-/*.animate {*/
-/*    animation-name: bgextendAnimeSecond;*/
-/*    animation-duration: 1s;*/
-/*    animation-fill-mode:forwards;*/
-/*}*/
-        /*!* styles.css *!*/
-/*@keyframes buttonAnimation {*/
-
-/*    0% {*/
-/*        transform: scale(1);*/
-/*        background-color: #f00;*/
-/*    }*/
-/*    50% {*/
-/*        transform: scale(1.1);*/
-/*        background-color: #0056b3;*/
-/*    }*/
-/*    100% {*/
-/*        transform: scale(1);*/
-/*        background-color: #007bff;*/
-/*    }*/
-/*}*/
-
-/*.animate {*/
-/*    animation: bgextendAnimeSecond 0.5s ease-out;*/
-/*}*/
+.animate {
+    /*--------- 右から --------*/
+    .bgRLextend::before{
+        animation-name:bgRLextendAnime;
+        animation-duration:2s;
+        animation-fill-mode:forwards;
+        content: "";
+        position: absolute;
+        z-index: 999    ;
+        width: 400px;
+        height: 100%;
+        background-color: #600;/*伸びる背景色の設定*/
+    }
+}
