--- a/src/app/_components/toppage_top_slideshow/common.css
+++ b/src/app/_components/toppage_top_slideshow/common.css
@@ -81,6 +81,7 @@
     width: 100%;
     height: 100vh;
     overflow: hidden;
+    background-color: #EBE8DB;
 }
 
 .photo_list {
@@ -101,11 +102,12 @@
     display: block;
     width: 800px;
     height: 450px;
-    margin: 20px;
+    /*margin: 20px;*/
     background-size: cover;
     background-position: center;
     border: #fff 3px solid;
     border-radius: 10px;
+    background-color: #EBE8DB;
 }
 
 
@@ -130,8 +132,13 @@
         content: "";
         position: absolute;
         z-index: 999    ;
-        width: 400px;
+        width: 800px;
         height: 100%;
         background-color: #600;/*伸びる背景色の設定*/
     }
+}
+
+.topButton{
+    padding: 0 10px;
+    border-radius:10px;
 }
