--- a/src/app/_components/toppage_top_slideshow/common.css
+++ b/src/app/_components/toppage_top_slideshow/common.css
@@ -1,43 +1,41 @@
 /*========= レイアウトのためのCSS ===============*/
 
-.bgextend{
+.bgextend {
     width: 400px;
-    box-sizing:border-box;
+    box-sizing: border-box;
 }
 
 /*========= 背景色の動きのCSS ===============*/
 
 /*背景色が伸びて出現 共通*/
-.bgextend{
-    animation-name:bgextendAnimeBase;
-    animation-duration:1s;
-    animation-delay: 0.6s;
-    animation-fill-mode:forwards;
+.bgextend {
+    animation-name: bgextendAnimeBase;
+    animation-fill-mode: forwards;
     position: relative;
-    overflow: hidden;/*　はみ出た色要素を隠す　*/
-    opacity:0;
+    overflow: hidden; /*　はみ出た色要素を隠す　*/
+    opacity: 0;
 }
 
-@keyframes bgextendAnimeBase{
+@keyframes bgextendAnimeBase {
     from {
-        opacity:0;
+        opacity: 0;
     }
 
     to {
-        opacity:1;
+        opacity: 1;
     }
 }
 
 /*中の要素*/
-.bgappear{
-    animation-name:bgextendAnimeSecond;
+.bgappear {
+    animation-name: bgextendAnimeSecond;
     animation-duration:1s;
     animation-delay: 0.6s;
-    animation-fill-mode:forwards;
+    animation-fill-mode: forwards;
     opacity: 0;
 }
 
-@keyframes bgextendAnimeSecond{
+@keyframes bgextendAnimeSecond {
     0% {
         opacity: 0;
     }
@@ -47,21 +45,21 @@
 }
 
 
-@keyframes bgRLextendAnime{
+@keyframes bgRLextendAnime {
     0% {
-        transform-origin:right;
-        transform:scaleX(0);
+        transform-origin: right;
+        transform: scaleX(0);
     }
     50% {
-        transform-origin:right;
-        transform:scaleX(1);
+        transform-origin: right;
+        transform: scaleX(1);
     }
     50.001% {
-        transform-origin:left;
+        transform-origin: left;
     }
     100% {
-        transform-origin:left;
-        transform:scaleX(0);
+        transform-origin: left;
+        transform: scaleX(0);
     }
 }
 
@@ -125,16 +123,31 @@
 
 .animate {
     /*--------- 右から --------*/
-    .bgRLextend::before{
-        animation-name:bgRLextendAnime;
-        animation-duration:2s;
-        animation-fill-mode:forwards;
+
+    .bgRLextend::before {
+        animation-name: bgRLextendAnime;
+        animation-duration: 1.5s;
+        animation-fill-mode: forwards;
         content: "";
         position: absolute;
-        z-index: 999    ;
+        z-index: 999;
         width: 800px;
         height: 100%;
-        background-color: #600;/*伸びる背景色の設定*/
+        background-color: #600; /*伸びる背景色の設定*/
+    }
+}.prevanimate {
+    /*--------- 右から --------*/
+
+    .bgRLextend::before {
+        animation-name: bgRLextendAnime;
+        animation-duration: 1.5s;
+        animation-fill-mode: forwards;
+        content: "";
+        position: absolute;
+        z-index: 999;
+        width: 800px;
+        height: 100%;
+        background-color: #600; /*伸びる背景色の設定*/
     }
 }
 
