--- a/src/app/_components/toppage_top_slideshow/common.css
+++ b/src/app/_components/toppage_top_slideshow/common.css
@@ -63,6 +63,24 @@
     }
 }
 
+@keyframes bgLRextendAnime {
+    0% {
+        transform-origin: left;
+        transform: scaleX(0);
+    }
+    50% {
+        transform-origin: left;
+        transform: scaleX(1);
+    }
+    50.001% {
+        transform-origin: right;
+    }
+    100% {
+        transform-origin: right;
+        transform: scaleX(0);
+    }
+}
+
 .slide_master {
     width: 1300px;
     display: flex;
@@ -135,11 +153,12 @@
         height: 100%;
         background-color: #600; /*伸びる背景色の設定*/
     }
-}.prevanimate {
-    /*--------- 右から --------*/
+}
 
-    .bgRLextend::before {
-        animation-name: bgRLextendAnime;
+.prevanimate{
+
+    .bgLRextend::before {
+        animation-name: bgLRextendAnime;
         animation-duration: 1.5s;
         animation-fill-mode: forwards;
         content: "";
@@ -147,7 +166,7 @@
         z-index: 999;
         width: 800px;
         height: 100%;
-        background-color: #600; /*伸びる背景色の設定*/
+        background-color: #ff0000; /* 伸びる背景色の設定 */
     }
 }
 
