--- a/src/app/_components/Toppage_2nd/common.css
+++ b/src/app/_components/Toppage_2nd/common.css
@@ -11,3 +11,10 @@ div#test{
     width: 200px;
     height: 200px;
 }
+
+div.boxes{
+    align-content: center;
+    width: 250px;
+    height: 250px;
+    object-fit: fill;
+}
