--- a/src/app/_components/Toppage_2nd/common.css
+++ b/src/app/_components/Toppage_2nd/common.css
@@ -19,12 +19,12 @@ div.boxes{
     height: 250px;
 }
 p.s2tit{
-    margin: 0 50px 0 50px;
-    width: 200px;
+    /*width: 200px;*/
     height: 1.5rem;
-    font-size: 1.2rem;
+    font-size: 2rem;
     text-align: center;
-    overflow: hidden;
+    vertical-align: bottom;
+    /*overflow: hidden;*/
 }
 .slide2{
     border: none;
@@ -43,4 +43,11 @@ div#S2under{
 /*Swiper設定上書き*/
 div.swiper-scrollbar-horizontal{
     background-image: linear-gradient(90deg, rgba(233, 233, 233, 1), rgba(120, 120, 120, 1));
+}
+.swiper-slide{
+    width: 20px;
+    transition: 0.5s;
+}
+.swiper-slide-prev{
+    width: 20px;
 }
