--- a/src/app/_components/Toppage_2nd/common.css
+++ b/src/app/_components/Toppage_2nd/common.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Italiana&display=swap');
+
 div.inner{
     display: flex;
     justify-content: center;
@@ -8,7 +10,7 @@ div.inner{
 }
 
 div.boxes{
-    margin: 50px 50px 50px 50px;
+    margin: 50px 0 50px 100px;
     align-content: center;
     width: 250px;
     height: 250px;
@@ -16,14 +18,13 @@ div.boxes{
 p.s2tit{
     /*width: 200px;*/
     height: 1.5rem;
+    font-family: "Italiana", sans-serif;
+    font-weight: 400;
+    font-style: normal;
     font-size: 2rem;
     text-align: center;
     vertical-align: bottom;
     /*overflow: hidden;*/
-}
-div.underline{
-    width: 80%;
-    border: black 5px solid;
 }
 /*Swiper設定上書き*/
 
