breakpointでレスポンシブ対応

--- a/src/app/_components/Toppage_2nd/common.css
+++ b/src/app/_components/Toppage_2nd/common.css
@@ -10,7 +10,7 @@ div.inner{
 }
 
 div.boxes{
-    margin: 50px 0 50px 100px;
+    margin: 50px 0 50px 11%;
     align-content: center;
     width: 250px;
     height: 250px;
