--- a/src/app/updateProfile/updateProfile.css
+++ b/src/app/updateProfile/updateProfile.css
@@ -2,32 +2,42 @@
 
 body {
     font-family: "zen+KakuGothic+Antique", system-ui;
-
+    background-color: #D0C7B2;
     margin: 0;
     padding: 0;
 }
+div.updateProfile_Text{
+    background-color: #A58473;
+    margin: 5% 0 5% 0;
+    padding: 15px 0 15px 0;
+}
 div.updateProfile_Text h1 {
     font-weight: bold;
-    margin-top: 70px;
-    margin-bottom: 70px;
     font-size: 2rem;
     text-align: center;
 }
 
 div.enterUpdateUserProfile{
-    width: 500px;
+    width: 80%;
     margin: 0 auto;
-    flex-direction: column;
+    margin-bottom: 2%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    background-color: #fff;
 }
 
 div.updateProfile_img{
-
+    margin: 5%;
 }
 
 div.profile_img{
     display: flex;
     align-items: center;
 
+}
+div.profile_img img{
+    border-radius: 50%;
 }
 
 div.profile_img svg {
@@ -44,24 +54,39 @@ button#btn_imgUpdate{
     font-weight: bold;
 }
 div#form{
-    margin-top: 80px;
-    margin-bottom: 120px;
-}
-div#form label{
-    margin: 0 10px 0 0;
-}
+    margin: 80px 5% 120px 5%;
 
+}
+div#form form label{
+    /*margin: 0 0 25px 1rem;*/
+}
+label#Name{
+    font-size: 1.5rem;
+}
 div#form input{
 
     width: 500px;
-    margin: 0 0 20px 0;
+    margin: 5px 0 20px 0;
     padding: 10px 20px 10px 40px;
+    border: black solid 2px;
+    border-radius: 5px;
 }
 
 div#form button {
     display: flex;
     justify-content: center;
     padding: 10px 40px;
+    border: black solid 2px;
     border-radius: 30px;
     margin:  30px auto;
+    color: #fff;
+    background-color: #605252;
+}
+
+@media(max-width: 1500px) {
+    div.enterUpdateUserProfile{
+        flex-direction: column;
+        justify-content: center;
+    }
+    
 }
