--- a/src/app/sendAddress/sendAddress.css
+++ b/src/app/sendAddress/sendAddress.css
@@ -5,6 +5,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: "zen KakuGothic Antique",system-ui;
+    background-color: #EBE8DB;
 
 }
 
@@ -12,8 +13,15 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 110px;
+    margin: 50px 10%;
+    background-color: #fff;
 }
+
+h2{
+    margin: 2% 0 0 0;
+    font-size: 2em;
+}
+
 div.goods{
     display: flex;
     flex-direction: row;
@@ -116,21 +124,22 @@ a{
 }
 
 div.control_button{
+    width: 70%;
     margin-top: 80px;
     display: flex;
+    justify-content: space-between;
     align-items: center;
 }
 
 button{
     display: block;
     border-radius: 20px;
-    background-color: #000;
     color: #000;
     font-size: 1.2rem;
     padding: 10px 20px;
     margin: 20px;
     background-color: #eee;
-    border: 0.5px solid #aaa;
+    border: 2px solid #aaa;
 }
 button#Post{
     display: inline;
@@ -140,6 +149,12 @@ button#Post{
     margin: 0 0 0 20px;
 }
 button[type="submit"]{}
+
+button#ToPay{
+    background-color: #605252;
+    color: white;
+    font-weight: bold;
+}
 
 p.middletext{
     margin: 40px 0 5px 0;
