--- a/src/app/_components/toppage_site3/common.css
+++ b/src/app/_components/toppage_site3/common.css
@@ -1,6 +1,47 @@
-
-div{
+body {
+    margin : 0 ;
+    padding : 0 ;
+}
+div.siteunbermain{
     font-family: Verdana, Geneva, Tahoma, Verdana, sans-serif;
     font-size: 50px;
-
+    width: 100%;
+    height: 100% ;
+    background-color: #E2DED7;
+    margin: 7% 0;
+    padding: 3% 0;
+}
+.site3{
+    text-align: center;
+    width: 80%;
+    margin: 4% auto;
+    display:flex;
+    align-items:center;
+    list-style : none ;
+    justify-content: center;
+}
+.tatemozi{
+    -ms-writing-mode: tb-rl;
+    writing-mode: vertical-rl;
+    text-orientation: sideways;
+}
+.image{
+    padding-bottom: 5%;
+    margin: 0 auto;
+    width: 100%;
+    height: auto;
+}
+.site3 li{
+    margin-left: 5%;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 33%;
+}
+.site3 li p{
+    width: 100%;
+    text-align: center ;
+    list-style : none ;
+    font-size: 30px;
 }
