--- a/src/app/_components/footer/Footer.css
+++ b/src/app/_components/footer/Footer.css
@@ -10,7 +10,7 @@ div#links{
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
-    margin: 10px 0 0   0;
+    margin: 10px 0 20px 0;
 }
 div#footer p{
     font-size: 0.8rem;
@@ -22,5 +22,6 @@ p span{
 p#c{
     width: 100%;
     text-align: center;
-    margin: 0 0  0;
+    padding-bottom: 10px;
+    margin: 0 0 0 0;
 }
